# mlflow-testing

./: README.md  pyproject.toml
mlartifacts/115897018556407516/fe6207137d20457aaa86b471dadb3e8f/artifacts/rf_apples/: MLmodel  conda.yaml  input_example.json  model.pkl  python_env.yaml
mlflow-testing/: apple_experiments.py  main.py
mlruns/0/: meta.yaml
mlruns/115897018556407516/: meta.yaml
mlruns/115897018556407516/fe6207137d20457aaa86b471dadb3e8f/: meta.yaml
mlruns/115897018556407516/fe6207137d20457aaa86b471dadb3e8f/metrics/: mae  mse  r2  rmse
mlruns/115897018556407516/fe6207137d20457aaa86b471dadb3e8f/tags/: mlflow.log-model.history  mlflow.source.git.commit  mlflow.source.name
